--- a/src/main/resources/com/wlf/app/main/mainView.fxml
+++ b/src/main/resources/com/wlf/app/main/mainView.fxml
@@ -99,12 +99,12 @@
                                     <Game fx:constant="TSE" />
                                 </userData>
                             </RadioButton>
-                            <RadioButton mnemonicParsing="false" selected="true" text="Any" toggleGroup="$tgGame" GridPane.rowIndex="2">
+                            <RadioButton mnemonicParsing="false" selected="true" text="%filter.game.any" toggleGroup="$tgGame" GridPane.rowIndex="2">
                                 <userData>
                                     <Game fx:constant="ANY" />
                                 </userData>
                             </RadioButton>
-                            <RadioButton fx:id="rbMaps" mnemonicParsing="false" text="Maps" GridPane.columnIndex="1">
+                            <RadioButton fx:id="rbMaps" mnemonicParsing="false" text="%filter.type.map" GridPane.columnIndex="1">
                                 <toggleGroup>
                                     <ToggleGroup fx:id="tgType" />
                                 </toggleGroup>
@@ -112,22 +112,22 @@
                                     <Type fx:constant="MAP" />
                                 </userData>
                             </RadioButton>
-                            <RadioButton fx:id="rbMods" mnemonicParsing="false" text="Mods" toggleGroup="$tgType" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                            <RadioButton fx:id="rbMods" mnemonicParsing="false" text="%filter.type.mod" toggleGroup="$tgType" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                 <userData>
                                     <Type fx:constant="MOD" />
                                 </userData>
                             </RadioButton>
-                            <RadioButton mnemonicParsing="false" text="Skin" toggleGroup="$tgType" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                            <RadioButton mnemonicParsing="false" text="%filter.type.skin" toggleGroup="$tgType" GridPane.columnIndex="1" GridPane.rowIndex="2">
                                 <userData>
                                     <Type fx:constant="SKIN" />
                                 </userData>
                             </RadioButton>
-                            <RadioButton mnemonicParsing="false" selected="true" text="Any" toggleGroup="$tgType" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                            <RadioButton mnemonicParsing="false" selected="true" text="%filter.type.any" toggleGroup="$tgType" GridPane.columnIndex="1" GridPane.rowIndex="3">
                                 <userData>
                                     <Type fx:constant="UNDEFINED" />
                                 </userData>
                             </RadioButton>
-                            <RadioButton fx:id="rbSp" mnemonicParsing="false" text="Singleplayer" GridPane.columnIndex="2">
+                            <RadioButton fx:id="rbSp" mnemonicParsing="false" text="%filter.mode.single" GridPane.columnIndex="2">
                                 <toggleGroup>
                                     <ToggleGroup fx:id="tgMode" />
                                 </toggleGroup>
@@ -135,24 +135,24 @@
                                     <Mode fx:constant="SP" />
                                 </userData>
                             </RadioButton>
-                            <RadioButton fx:id="rbCoop" mnemonicParsing="false" text="Co-op" toggleGroup="$tgMode" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                            <RadioButton fx:id="rbCoop" mnemonicParsing="false" text="%filter.mode.coop" toggleGroup="$tgMode" GridPane.columnIndex="2" GridPane.rowIndex="1">
                                 <userData>
                                     <Mode fx:constant="COOP" />
                                 </userData>
                             </RadioButton>
-                            <RadioButton fx:id="rbDm" mnemonicParsing="false" text="Deathmatch" toggleGroup="$tgMode" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                            <RadioButton fx:id="rbDm" mnemonicParsing="false" text="%filter.mode.dm" toggleGroup="$tgMode" GridPane.columnIndex="2" GridPane.rowIndex="2">
                                 <userData>
                                     <Mode fx:constant="DM" />
                                 </userData>
                             </RadioButton>
-                            <RadioButton mnemonicParsing="false" selected="true" text="Any" toggleGroup="$tgMode" GridPane.columnIndex="2" GridPane.rowIndex="3">
+                            <RadioButton mnemonicParsing="false" selected="true" text="%filter.mode.any" toggleGroup="$tgMode" GridPane.columnIndex="2" GridPane.rowIndex="3">
                                 <userData>
                                     <Mode fx:constant="ALL" />
                                 </userData>
                             </RadioButton>
-                            <CheckBox fx:id="cbInstalled" mnemonicParsing="false" text="Installed" GridPane.columnIndex="3" />
-                            <CheckBox fx:id="cbCompleted" mnemonicParsing="false" text="Completed" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-                            <TextField fx:id="tfNameFilter" promptText="Name filter" GridPane.columnSpan="2" GridPane.rowIndex="4" />
+                            <CheckBox fx:id="cbInstalled" mnemonicParsing="false" text="%filter.installed" GridPane.columnIndex="3" />
+                            <CheckBox fx:id="cbCompleted" mnemonicParsing="false" text="%filter.completed" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                            <TextField fx:id="tfNameFilter" promptText="%filter.name" GridPane.columnSpan="2" GridPane.rowIndex="4" />
                             <HBox alignment="CENTER_RIGHT" GridPane.columnIndex="2" GridPane.rowIndex="4">
                                 <Label text="From:" />
                                 <DatePicker />
@@ -161,15 +161,15 @@
                                 <Label text="To:" />
                                 <DatePicker />
                             </HBox>
-                            <Button mnemonicParsing="false" onAction="#rescanDownloadDir" prefHeight="30.0" prefWidth="205.0" text="Rescan Download Directory" GridPane.columnIndex="4" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
-                            <Button graphicTextGap="2.0" mnemonicParsing="false" onAction="#onPlayTFE" prefWidth="205.0" text="Play The First Encounter" GridPane.columnIndex="4" GridPane.halignment="RIGHT">
+                            <Button mnemonicParsing="false" onAction="#rescanDownloadDir" prefHeight="30.0" prefWidth="205.0" text="%actions.rescanDownloads" GridPane.columnIndex="4" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
+                            <Button graphicTextGap="2.0" mnemonicParsing="false" onAction="#onPlayTFE" prefWidth="205.0" text="%actions.playTFE" GridPane.columnIndex="4" GridPane.halignment="RIGHT">
                                 <graphic>
                                     <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
                                         <Image url="@icons/tfe.png" />
                                     </ImageView>
                                 </graphic>
                             </Button>
-                            <Button graphicTextGap="2.0" mnemonicParsing="false" onAction="#onPlayTSE" prefWidth="205.0" text="Play The Second Encounter" GridPane.columnIndex="4" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+                            <Button graphicTextGap="2.0" mnemonicParsing="false" onAction="#onPlayTSE" prefWidth="205.0" text="%actions.playTSE" GridPane.columnIndex="4" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
                                 <graphic>
                                     <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
                                         <Image url="@icons/game.png" />
@@ -182,27 +182,27 @@
                     <center>
                         <TableView fx:id="table" editable="true" items="${controller.model.content}" prefHeight="200.0" prefWidth="200.0" tableMenuButtonVisible="true" BorderPane.alignment="CENTER">
                             <columns>
-                                <TableColumn prefWidth="246.0" text="Name">
+                                <TableColumn prefWidth="246.0" text="%table.name">
                                     <cellValueFactory>
                                         <PropertyValueFactory property="name" />
                                     </cellValueFactory>
                                 </TableColumn>
-                                <TableColumn prefWidth="253.0" text="File">
+                                <TableColumn prefWidth="253.0" text="%table.file">
                                     <cellValueFactory>
                                         <PropertyValueFactory property="downloadedFileName" />
                                     </cellValueFactory>
                                 </TableColumn>
-                                <TableColumn minWidth="0.0" prefWidth="149.0" text="Game">
+                                <TableColumn minWidth="0.0" prefWidth="149.0" text="%table.game">
                                     <cellValueFactory>
                                         <PropertyValueFactory property="game" />
                                     </cellValueFactory>
                                 </TableColumn>
-                                <TableColumn prefWidth="71.0" text="Type">
+                                <TableColumn prefWidth="71.0" text="%table.type">
                                     <cellValueFactory>
                                         <PropertyValueFactory property="type" />
                                     </cellValueFactory>
                                 </TableColumn>
-                                <TableColumn prefWidth="136.0" text="Mode(s)">
+                                <TableColumn prefWidth="136.0" text="%table.mode">
                                     <cellValueFactory>
                                         <PropertyValueFactory property="modes" />
                                     </cellValueFactory>
@@ -215,7 +215,7 @@
                                         <PropertyValueFactory property="installed" />
                                     </cellValueFactory>
                                     <graphic>
-                                        <Label text="I">
+                                        <Label text="%table.installed">
                                             <tooltip>
                                                 <Tooltip text="Installed" />
                                             </tooltip>
@@ -230,19 +230,19 @@
                                         <PropertyValueFactory property="completed" />
                                     </cellValueFactory>
                                     <graphic>
-                                        <Label text="C">
+                                        <Label text="%table.completed">
                                             <tooltip>
                                                 <Tooltip text="Completed" />
                                             </tooltip>
                                         </Label>
                                     </graphic>
                                 </TableColumn>
-                                <TableColumn fx:id="colDateAdded" prefWidth="120.0" text="date added">
+                                <TableColumn fx:id="colDateAdded" prefWidth="120.0" text="%table.dateAdded">
                                     <cellValueFactory>
                                         <PropertyValueFactory property="dateAdded" />
                                     </cellValueFactory>
                                 </TableColumn>
-                                <TableColumn prefWidth="180.0" text="Rating">
+                                <TableColumn prefWidth="180.0" text="%table.rating">
                                     <cellFactory>
                                         <RatingTableCellFactory />
                                     </cellFactory>
@@ -254,14 +254,14 @@
                             <contextMenu>
                                 <ContextMenu onShowing="#updateContextMenu">
                                     <items>
-                                        <MenuItem fx:id="quickPlay" mnemonicParsing="false" onAction="#onPlaySingleMap" text="Play!" />
-                                        <MenuItem fx:id="menuItemInstall" mnemonicParsing="false" onAction="#onDeploy" text="Install" />
-                                        <MenuItem fx:id="menuItemRemove" mnemonicParsing="false" onAction="#onRemove" text="Remove" />
+                                        <MenuItem fx:id="quickPlay" mnemonicParsing="false" onAction="#onPlaySingleMap" text="%contextMenu.quickPlay" />
+                                        <MenuItem fx:id="menuItemInstall" mnemonicParsing="false" onAction="#onDeploy" text="%contextMenu.install" />
+                                        <MenuItem fx:id="menuItemRemove" mnemonicParsing="false" onAction="#onRemove" text="%contextMenu.remove" />
                                         <SeparatorMenuItem />
-                                        <MenuItem mnemonicParsing="false" onAction="#onMarkComplete" text="Un-/Mark complete" />
-                                        <MenuItem mnemonicParsing="false" onAction="#onRate" text="Rate..." />
+                                        <MenuItem mnemonicParsing="false" onAction="#onMarkComplete" text="%contextMenu.markComplete" />
+                                        <MenuItem mnemonicParsing="false" onAction="#onRate" text="%contextMenu.rate" />
                                         <SeparatorMenuItem />
-                                        <MenuItem mnemonicParsing="false" onAction="#onDelete" text="Delete" />
+                                        <MenuItem mnemonicParsing="false" onAction="#onDelete" text="%contextMenu.delete" />
                                     </items>
                                 </ContextMenu>
                             </contextMenu>
