--- a/src/main/resources/com/wlf/app/main/repositoryView.fxml
+++ b/src/main/resources/com/wlf/app/main/repositoryView.fxml
@@ -1,23 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.wlf.common.controls.AccentedProgressBarTableCellFactory?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.control.Tooltip?>
-<?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import org.controlsfx.control.TaskProgressView?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
-
-  <BorderPane prefHeight="584.0" prefWidth="1077.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wlf.app.main.net.GroRepositoryController">
+<BorderPane prefHeight="584.0" prefWidth="1077.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wlf.app.main.net.GroRepositoryController">
       <bottom>
           <BorderPane BorderPane.alignment="CENTER">
               <center>
@@ -93,42 +89,9 @@
                   </center>
               </BorderPane>
               <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
-                  <center>
-                      <TitledPane collapsible="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Downloads" BorderPane.alignment="TOP_LEFT">
-                          <TableView items="${controller.activeDownloads}">
-                              <columns>
-                                  <TableColumn prefWidth="430.0" text="%downloads.fileName">
-                                      <cellValueFactory>
-                                          <PropertyValueFactory property="fileName" />
-                                      </cellValueFactory>
-                                  </TableColumn>
-                                  <TableColumn prefWidth="247.0" text="%downloads.status">
-                                      <cellValueFactory>
-                                          <PropertyValueFactory property="status" />
-                                      </cellValueFactory>
-                                  </TableColumn>
-                                  <TableColumn prefWidth="103.0" text="%downloads.currentlyDownloaded">
-                                      <cellValueFactory>
-                                          <PropertyValueFactory property="downloadedMb" />
-                                      </cellValueFactory>
-                                  </TableColumn>
-                                  <TableColumn minWidth="0.0" prefWidth="65.0" text="%downloads.size">
-                                      <cellValueFactory>
-                                          <PropertyValueFactory property="maxMb" />
-                                      </cellValueFactory>
-                                  </TableColumn>
-                                  <TableColumn prefWidth="333.0" text="%downloads.progress">
-                                      <cellFactory>
-                                          <AccentedProgressBarTableCellFactory />
-                                      </cellFactory>
-                                      <cellValueFactory>
-                                          <PropertyValueFactory property="progress" />
-                                      </cellValueFactory>
-                                  </TableColumn>
-                              </columns>
-                          </TableView>
-                      </TitledPane>
-                  </center>
+            <center>
+               <TaskProgressView fx:id="downloadTaskView" retainTasks="true" BorderPane.alignment="CENTER" />
+            </center>
               </BorderPane>
           </SplitPane>
       </center>
