--- a/src/main/resources/com/wlf/app/main/repositoryView.fxml
+++ b/src/main/resources/com/wlf/app/main/repositoryView.fxml
@@ -2,97 +2,98 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.control.Tooltip?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import org.controlsfx.control.TaskProgressView?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
 <BorderPane prefHeight="584.0" prefWidth="1077.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wlf.app.main.net.GroRepositoryController">
-      <bottom>
-          <BorderPane BorderPane.alignment="CENTER">
-              <center>
-                  <ProgressBar fx:id="downloadProgress" prefHeight="20.0" prefWidth="1009.0" progress="0.0" />
-              </center>
-              <left>
-                  <HBox BorderPane.alignment="CENTER">
-                      <Button disable="${controller.stopDownloadButtonDisabled}" mnemonicParsing="false" onAction="#onStopDownloads">
-                          <tooltip>
-                              <Tooltip text="%downloads.stop.tooltip" />
-                          </tooltip>
-                          <graphic>
-                              <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
-                                  <Image url="@icons/stop.png" />
-                              </ImageView>
-                          </graphic>
-                      </Button>
-                      <Button contentDisplay="GRAPHIC_ONLY" graphicTextGap="1.0" mnemonicParsing="false" onAction="#onPauseDownloads">
-                          <tooltip>
-                              <Tooltip text="%downloads.pause.tooltip" />
-                          </tooltip>
-                          <graphic>
-                              <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
-                                  <Image url="@icons/play_pause_64dp.png" />
-                              </ImageView>
-                          </graphic>
-                      </Button>
-                  </HBox>
-              </left>
-          </BorderPane>
-      </bottom>
-      <center>
-          <SplitPane dividerPositions="0.741307371349096" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
-              <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
-                  <center>
-                      <TitledPane collapsible="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Gro Repository" BorderPane.alignment="TOP_CENTER">
-                          <BorderPane fx:id="webViewContainer">
-                              <center>
-                                        <!-- will be loaded at runtime upon activating the tab and inserted here -->
+    <center>
+        <SplitPane dividerPositions="0.741307371349096" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
+            <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+                <center>
+                    <TitledPane collapsible="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Gro Repository" BorderPane.alignment="TOP_CENTER">
+                        <BorderPane fx:id="webViewContainer">
+                            <center>
+                                <!-- will be loaded at runtime upon activating the tab and inserted here -->
+                            </center>
+                            <top>
+                                <BorderPane prefHeight="25.0" prefWidth="1107.0" BorderPane.alignment="CENTER">
+                                    <center>
+                                        <Label text="${controller.browser.location}" BorderPane.alignment="CENTER" />
                                     </center>
-                              <top>
-                                  <BorderPane prefHeight="25.0" prefWidth="1107.0" BorderPane.alignment="CENTER">
-                                      <center>
-                                          <Label text="${controller.browser.location}" BorderPane.alignment="CENTER" />
-                                      </center>
-                                      <left>
-                                          <HBox prefHeight="25.0" prefWidth="77.0" spacing="8.0" BorderPane.alignment="CENTER">
-                                              <Button mnemonicParsing="false" onAction="#onBrowserBack">
-                                                  <graphic>
-                                                      <FontIcon iconLiteral="fas-arrow-left" iconSize="24" />
-                                                  </graphic>
-                                              </Button>
-                                              <Button mnemonicParsing="false" onAction="#onBrowserForward">
-                                                  <graphic>
-                                                      <FontIcon iconLiteral="fas-arrow-right" iconSize="24" />
-                                                  </graphic>
-                                              </Button>
-                                          </HBox>
-                                      </left>
-                                      <right>
-                                          <HBox alignment="TOP_RIGHT" prefHeight="25.0" prefWidth="36.0" BorderPane.alignment="CENTER">
-                                              <Button mnemonicParsing="false" onAction="#onBrowserRefresh">
-                                                  <graphic>
-                                                      <FontIcon iconLiteral="fas-redo" iconSize="24" />
-                                                  </graphic>
-                                              </Button>
-                                          </HBox>
-                                      </right>
-                                  </BorderPane>
-                              </top>
-                          </BorderPane>
-                      </TitledPane>
-                  </center>
-              </BorderPane>
-              <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
-            <center>
-               <TaskProgressView fx:id="downloadTaskView" retainTasks="true" BorderPane.alignment="CENTER" />
-            </center>
-              </BorderPane>
-          </SplitPane>
-      </center>
-  </BorderPane>
+                                    <left>
+                                        <HBox prefHeight="25.0" prefWidth="77.0" spacing="8.0" BorderPane.alignment="CENTER">
+                                            <Button mnemonicParsing="false" onAction="#onBrowserBack">
+                                                <graphic>
+                                                    <FontIcon iconLiteral="fas-arrow-left" iconSize="24" />
+                                                </graphic>
+                                            </Button>
+                                            <Button mnemonicParsing="false" onAction="#onBrowserForward">
+                                                <graphic>
+                                                    <FontIcon iconLiteral="fas-arrow-right" iconSize="24" />
+                                                </graphic>
+                                            </Button>
+                                        </HBox>
+                                    </left>
+                                    <right>
+                                        <HBox alignment="TOP_RIGHT" prefHeight="25.0" prefWidth="36.0" BorderPane.alignment="CENTER">
+                                            <Button mnemonicParsing="false" onAction="#onBrowserRefresh">
+                                                <graphic>
+                                                    <FontIcon iconLiteral="fas-redo" iconSize="24" />
+                                                </graphic>
+                                            </Button>
+                                        </HBox>
+                                    </right>
+                                </BorderPane>
+                            </top>
+                        </BorderPane>
+                    </TitledPane>
+                </center>
+            </BorderPane>
+            <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+                <center>
+                    <TaskProgressView fx:id="downloadTaskView" retainTasks="true" BorderPane.alignment="CENTER" />
+                </center>
+            </BorderPane>
+        </SplitPane>
+    </center>
+   <bottom>
+      <GridPane maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+         <children>
+                <HBox spacing="8.0">
+                    <Button contentDisplay="GRAPHIC_ONLY" graphicTextGap="1.0" mnemonicParsing="false" onAction="#onPauseDownloads">
+                        <tooltip>
+                            <Tooltip text="%downloads.pause.tooltip" />
+                        </tooltip>
+                        <graphic>
+                            <FontIcon iconLiteral="fas-pause" />
+                        </graphic>
+                    </Button>
+                    <Button disable="${controller.stopDownloadButtonDisabled}" mnemonicParsing="false" onAction="#onStopDownloads">
+                        <tooltip>
+                            <Tooltip text="%downloads.stop.tooltip" />
+                        </tooltip>
+                        <graphic>
+                            <FontIcon iconLiteral="fas-stop" />
+                        </graphic>
+                    </Button>
+                </HBox>
+            <Button mnemonicParsing="false" onAction="#onClearDownloadList" text="%downloads.clear" GridPane.columnIndex="1" GridPane.halignment="RIGHT" />
+         </children>
+      </GridPane>
+   </bottom>
+</BorderPane>
