--- a/src/main/resources/com/wlf/app/preferences.fxml
+++ b/src/main/resources/com/wlf/app/preferences.fxml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.wlf.common.controls.ValidatingTextField?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Spinner?>
+<?import javafx.scene.control.SpinnerValueFactory.IntegerSpinnerValueFactory?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -11,11 +16,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-
-<?import javafx.scene.control.ButtonBar?>
-<?import com.wlf.common.controls.ValidatingTextField?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wlf.app.preferences.PreferencesController">
+
+<BorderPane prefHeight="625.0" prefWidth="887.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wlf.app.preferences.PreferencesController">
     <top>
         <VBox spacing="8.0" BorderPane.alignment="CENTER">
             <children>
@@ -44,12 +47,6 @@
                   <Label text="%language.warning" visible="${controller.languageWarningVisible}" GridPane.columnIndex="2" GridPane.rowIndex="1" />
                     </children>
                 </GridPane>
-            <HBox prefHeight="100.0" prefWidth="200.0" spacing="8.0">
-               <children>
-                  <Button defaultButton="true" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onSave" prefWidth="120.0" text="%save" />
-                  <Button cancelButton="true" mnemonicParsing="false" prefWidth="120.0" text="%cancel" onAction="#onCancel" />
-               </children>
-            </HBox>
             </children>
             <padding>
                 <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
@@ -57,59 +54,94 @@
         </VBox>
     </top>
     <center>
-        <GridPane BorderPane.alignment="CENTER">
-            <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="1049.0" minWidth="10.0" percentWidth="90.0" prefWidth="1026.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="550.0" minWidth="10.0" percentWidth="10.0" prefWidth="87.0" />
-            </columnConstraints>
-            <rowConstraints>
+      <VBox BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+         </BorderPane.margin>
+         <children>
+            <Label text="GroRepository">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </Label>
+            <GridPane vgap="8.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="20.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            </rowConstraints>
-            <BorderPane.margin>
-                <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
-            </BorderPane.margin>
-            <Label text="%dir.downloads" GridPane.valignment="BOTTOM" />
-            <Label text="%dir.tfe" GridPane.rowIndex="2" GridPane.valignment="BOTTOM" />
-            <ValidatingTextField fx:id="vtfDownloadsPath" onDragDropped="#onDirectoryDrop" onDragOver="#onDirectoryDragOver" GridPane.columnSpan="2" GridPane.rowIndex="1" />
-            <ValidatingTextField fx:id="vtfTFEPath" onDragDropped="#onDirectoryDrop" onDragOver="#onDirectoryDragOver" GridPane.columnSpan="2" GridPane.rowIndex="3" />
-            <Label text="%dir.tse" GridPane.rowIndex="4" GridPane.valignment="BOTTOM" />
-            <ValidatingTextField fx:id="vtfTSEPath" onDragDropped="#onDirectoryDrop" onDragOver="#onDirectoryDragOver" GridPane.columnSpan="2" GridPane.rowIndex="5" />
-            <HBox alignment="BOTTOM_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="8.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
-                <FontIcon fx:id="imgCheckTFE" fill="GREEN" iconColor="GREEN" iconLiteral="fas-check-circle" iconSize="32" />
-                <Button fx:id="btnBrowseDirectoryTFE" mnemonicParsing="false">
-                    <graphic>
-                        <FontIcon iconLiteral="far-folder-open" iconSize="20" />
-                    </graphic>
-                </Button>
-            </HBox>
-            <HBox alignment="BOTTOM_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="8.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
-                <FontIcon fx:id="imgCheckTSE" fill="GREEN" iconColor="GREEN" iconLiteral="fas-check-circle" iconSize="32" />
-                <Button fx:id="btnBrowseDirectoryTSE" mnemonicParsing="false">
-                    <graphic>
-                        <FontIcon iconLiteral="far-folder-open" iconSize="20" />
-                    </graphic>
-                </Button>
-            </HBox>
-            <HBox alignment="BOTTOM_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
-                <Button fx:id="btnBrowseDirectoryDownloads" mnemonicParsing="false">
-                    <graphic>
-                        <FontIcon iconLiteral="far-folder-open" iconSize="20" />
-                    </graphic>
-                </Button>
-            </HBox>
-        </GridPane>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                     <Label text="%dir.downloads" GridPane.valignment="BOTTOM" />
+                     <ValidatingTextField fx:id="vtfDownloadsPath" onDragDropped="#onDirectoryDrop" onDragOver="#onDirectoryDragOver" GridPane.columnSpan="2" GridPane.rowIndex="1" />
+                      <Button fx:id="btnBrowseDirectoryDownloads" alignment="CENTER" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.halignment="RIGHT">
+                          <graphic>
+                              <FontIcon iconLiteral="far-folder-open" iconSize="20" />
+                          </graphic>
+                      </Button>
+                  <Label text="%downloads.max" GridPane.rowIndex="2" />
+                  <Spinner fx:id="spinMaxDownloads" GridPane.rowIndex="3">
+                      <valueFactory>
+                          <SpinnerValueFactory.IntegerSpinnerValueFactory max="10" min="1" />
+                      </valueFactory>
+                  </Spinner>
+                  <CheckBox fx:id="cbAutoClearList" text="Auto. clear finished downloads from list" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+               </children>
+            </GridPane>
+              <GridPane vgap="8.0">
+                  <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="1049.0" minWidth="10.0" percentWidth="90.0" prefWidth="1026.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="550.0" minWidth="10.0" percentWidth="10.0" prefWidth="87.0" />
+                  </columnConstraints>
+                  <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  </rowConstraints>
+                  <Label text="%dir.tfe" GridPane.rowIndex="2" GridPane.valignment="BOTTOM" />
+                  <ValidatingTextField fx:id="vtfTFEPath" onDragDropped="#onDirectoryDrop" onDragOver="#onDirectoryDragOver" GridPane.columnSpan="2" GridPane.rowIndex="3" />
+                  <Label text="%dir.tse" GridPane.rowIndex="4" GridPane.valignment="BOTTOM" />
+                  <ValidatingTextField fx:id="vtfTSEPath" onDragDropped="#onDirectoryDrop" onDragOver="#onDirectoryDragOver" GridPane.columnSpan="2" GridPane.rowIndex="5" />
+                  <HBox alignment="BOTTOM_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="8.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                      <FontIcon fx:id="imgCheckTFE" fill="GREEN" iconColor="GREEN" iconLiteral="fas-check-circle" iconSize="32" />
+                      <Button fx:id="btnBrowseDirectoryTFE" mnemonicParsing="false">
+                          <graphic>
+                              <FontIcon iconLiteral="far-folder-open" iconSize="20" />
+                          </graphic>
+                      </Button>
+                  </HBox>
+                  <HBox alignment="BOTTOM_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="8.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                      <FontIcon fx:id="imgCheckTSE" fill="GREEN" iconColor="GREEN" iconLiteral="fas-check-circle" iconSize="32" />
+                      <Button fx:id="btnBrowseDirectoryTSE" mnemonicParsing="false">
+                          <graphic>
+                              <FontIcon iconLiteral="far-folder-open" iconSize="20" />
+                          </graphic>
+                      </Button>
+                  </HBox>
+                  <HBox alignment="BOTTOM_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" />
+               <Label text="\%games" GridPane.rowIndex="1">
+                  <font>
+                     <Font name="System Bold" size="16.0" />
+                  </font>
+               </Label>
+              </GridPane>
+         </children>
+      </VBox>
     </center>
     <bottom>
         <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <buttons>
-                <Button mnemonicParsing="false" onAction="#onSave" text="%save" defaultButton="true" />
+            <Button defaultButton="true" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onSave" prefWidth="120.0" text="%save" />
+            <Button cancelButton="true" mnemonicParsing="false" onAction="#onCancel" prefWidth="120.0" text="%cancel" />
             </buttons>
             <BorderPane.margin>
                 <Insets right="16.0" />
